--- a/example_config/dataset_model_maps.yaml
+++ b/example_config/dataset_model_maps.yaml
@@ -1,5 +1,7 @@
 global_models:
   - 'naive_model'
   - 'torch-deep:debug'
+  #- 'torch-deep:medium'
+  # - 'ewars_template'
 specific_models:
   - 'chtorch:medium'
