--- a/example_config/dataset_seeds.yaml
+++ b/example_config/dataset_seeds.yaml
@@ -1,1 +1,3 @@
 nepal_evaluation_set: '/home/knut/Data/ch_data/nepal_3.json'
+rwanda_evaluation_set: '/home/knut/Data/ch_data/rwanda_benchmark.json'
+laos_evaluation_set: '/home/knut/Data/ch_data/laos_humidity.json'
