--- a/example_config/problem_specifications.yaml
+++ b/example_config/problem_specifications.yaml
@@ -8,3 +8,23 @@
     - CRPS
     - SMAPE
     - MASE
+- name: rwanda_test
+  dataset_name: rwanda_evaluation_set
+  backtest_settings:
+    prediction_length: 3
+    n_periods: 2
+    stride: 1
+  metrics:
+    - CRPS
+    - SMAPE
+    - MASE
+- name: laos_test
+  dataset_name: laos_evaluation_set
+  backtest_settings:
+    prediction_length: 12
+    n_periods: 2
+    stride: 1
+  metrics:
+    - CRPS
+    - SMAPE
+    - MASE
