--- a/config/dataset_model_maps.yaml
+++ b/config/dataset_model_maps.yaml
@@ -1,6 +1,7 @@
 global_models:
   # - 'naive_model'
-  - 'torch-deep:debug'
-  - 'ewars_template'
+  #- 'torch-deep:debug'
+  #- 'ewars_template'
+  - 'rwanda_random_forest:v1'
 specific_models:
   - 'chtorch:medium'
