System for running based on last commit hash and deployment workflow to server

--- a/config/dataset_model_maps.yaml
+++ b/config/dataset_model_maps.yaml
@@ -1,7 +1,7 @@
 global_models:
-  # - 'naive_model'
+  - 'naive_model'
   #- 'torch-deep:debug'
   #- 'ewars_template'
-  - 'rwanda_random_forest:v1'
+  #- 'rwanda_random_forest:v1'
 specific_models:
   - 'chtorch:medium'
